second commit develop

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Cantantes</h1>
     <ul>
         <h2>Hansel y Raúl:</h2>
-        <li></li>
-        <li></li>
+        <li>Es un dúo musical cubano de salsa, que se caracterizan por su música animada y buena letra. </li>
+        <li>Con su album mas conocido, Charanga 76</li>
         <img src="">
     </ul>
     
