third commit develop

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2>Hansel y Raúl:</h2>
         <li>Es un dúo musical cubano de salsa, que se caracterizan por su música animada y buena letra. </li>
         <li>Con su album mas conocido, Charanga 76</li>
-        <img src="">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxmgOlsFlndsUOmiIDIIE7IdN7at1oPD7uDw&s">
     </ul>
     
 </body>
