--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <li>Es un dúo musical cubano de salsa, que se caracterizan por su música animada y buena letra. </li>
         <li>Con su album mas conocido, Charanga 76</li>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxmgOlsFlndsUOmiIDIIE7IdN7at1oPD7uDw&s">
+        <h2>Bad bunny:</h2>
+        <li></li>
+        <li></li>
+        <img src="">
     </ul>
     
 </body>
