fifth commit develop

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <li>Con su album mas conocido, Charanga 76</li>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxmgOlsFlndsUOmiIDIIE7IdN7at1oPD7uDw&s">
         <h2>Bad bunny:</h2>
-        <li></li>
-        <li></li>
+        <li>Es un influyente cantante de reguetón y trap latino de Puerto Rico. Nació el 10 de marzo de 1994, ha ganado reconocimiento y premios por su estilo innovador y su impacto en la música urbana. </li>
+        <li> Con álbumes exitosos como "X 100PRE", "YHLQMDLG", y "Un Verano Sin Ti"</li>
         <img src="">
     </ul>
     
