sixth commit develop

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>Bad bunny:</h2>
         <li>Es un influyente cantante de reguetón y trap latino de Puerto Rico. Nació el 10 de marzo de 1994, ha ganado reconocimiento y premios por su estilo innovador y su impacto en la música urbana. </li>
         <li> Con álbumes exitosos como "X 100PRE", "YHLQMDLG", y "Un Verano Sin Ti"</li>
-        <img src="">
+        <img src="https://i.scdn.co/image/ab6761610000e5eb9ad50e478a469448c6f369df">
     </ul>
     
 </body>
