seventh commit develop

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
         <li>Es un dúo musical cubano de salsa, que se caracterizan por su música animada y buena letra. </li>
         <li>Con su album mas conocido, Charanga 76</li>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxmgOlsFlndsUOmiIDIIE7IdN7at1oPD7uDw&s">
-        <h2>Bad bunny:</h2>
+        <h2>Bad Bunny:</h2>
         <li>Es un influyente cantante de reguetón y trap latino de Puerto Rico. Nació el 10 de marzo de 1994, ha ganado reconocimiento y premios por su estilo innovador y su impacto en la música urbana. </li>
         <li> Con álbumes exitosos como "X 100PRE", "YHLQMDLG", y "Un Verano Sin Ti"</li>
         <img src="https://i.scdn.co/image/ab6761610000e5eb9ad50e478a469448c6f369df">
+        <h2>Kaleth Morales:</h2>
+        <li> Fue un destacado cantante colombiano de vallenato. Conocido por su estilo moderno, A pesar de su corta vida, dejó una huella significativa en la música vallenata y sigue siendo una figura influyente en el género. </li>
+        <li>Con su album mas conocido, la hora de la verdad</li>
+        <img src="">
     </ul>
     
 </body>
