--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <li> Fue un destacado cantante colombiano de vallenato. Conocido por su estilo moderno, A pesar de su corta vida, dejó una huella significativa en la música vallenata y sigue siendo una figura influyente en el género. </li>
         <li>Con su album mas conocido, la hora de la verdad</li>
         <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fopen.spotify.com%2Falbum%2F3Go9Lvj1m9UOzidlfDOFVA&psig=AOvVaw01m4aijhXGxbO4q3ZGFmeo&ust=1725670622953000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOiYgpaOrYgDFQAAAAAdAAAAABAE">
+        <h2>Metro Boomin:</h2>
+        <li>Es un destacado productor y DJ de rap y trap. Es conocido por su estilo innovador y colaboraciones con artistas como Future y Drake. Es una figura clave en la música trap contemporánea. </li>
+        <li>Ha producido álbumes exitosos como Savage Mode</li>
+        <img src="">
+    
     </ul>
     
 </body>
