--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <h2>Bad Bunny:</h2>
         <li>Es un influyente cantante de reguetón y trap latino de Puerto Rico. Nació el 10 de marzo de 1994, ha ganado reconocimiento y premios por su estilo innovador y su impacto en la música urbana. </li>
         <li> Con álbumes exitosos como "X 100PRE", "YHLQMDLG", y "Un Verano Sin Ti"</li>
-        <img src="https://i.scdn.co/image/ab6761610000e5eb9ad50e478a469448c6f369df">
+        <img width="300px" height="300px" src="https://i.scdn.co/image/ab6761610000e5eb9ad50e478a469448c6f369df">
         <h2>Kaleth Morales:</h2>
         <li> Fue un destacado cantante colombiano de vallenato. Conocido por su estilo moderno, A pesar de su corta vida, dejó una huella significativa en la música vallenata y sigue siendo una figura influyente en el género. </li>
         <li>Con su album mas conocido, la hora de la verdad</li>
-        <img src="https://static.wikia.nocookie.net/vallenato/images/4/4d/Kaleth_Morales.jpg/revision/latest/scale-to-width-down/220?cb=20130803005657&path-prefix=es">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTW9WJ2RbhY1vCtFZb6e2WXuYRJO4wPhtYONA&s">
         <h2>Metro Boomin:</h2>
         <li>Es un destacado productor y DJ de rap y trap. Es conocido por su estilo innovador y colaboraciones con artistas como Future y Drake. Es una figura clave en la música trap contemporánea. </li>
         <li>Ha producido álbumes exitosos como Savage Mode</li>
