--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>Metro Boomin:</h2>
         <li>Es un destacado productor y DJ de rap y trap. Es conocido por su estilo innovador y colaboraciones con artistas como Future y Drake. Es una figura clave en la música trap contemporánea. </li>
         <li>Ha producido álbumes exitosos como Savage Mode</li>
-        <img src="https://i.scdn.co/image/ab6761610000e5ebdf9a1555f53a20087b8c5a5c">
+        <img width="300px" height="300px" src="https://i.scdn.co/image/ab6761610000e5ebdf9a1555f53a20087b8c5a5c">
         <h2>Carlos vives:</h2>
         <li>Carlos Vives, es un influyente cantante y compositor colombiano. Conocido por fusionar vallenato con pop y rock, ha lanzado álbumes exitosos y a ganado varios premios, incluidos Grammy Latinos, y es reconocido por su impacto en la música latina.</li>
         <li>Ha compuesto albumes como corazón profundo</li>
