--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Cantantes</h1>
+    <h1>Cantantes:</h1>
     <ul>
         <h2>Hansel y Raúl:</h2>
         <li>Es un dúo musical cubano de salsa, que se caracterizan por su música animada y buena letra. </li>
